--- a/pom.xml
+++ b/pom.xml
@@ -128,12 +128,20 @@
 			<artifactId>jasypt-spring-boot-starter</artifactId>
 			<version>${jasypt.version}</version>
 		</dependency>
+
+		<!-- HTTP Client -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${httpclient.version}</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<jdbi.version>3.21.0</jdbi.version>
 		<jasypt.version>3.0.4</jasypt.version>
+		<httpclient.version>4.5.13</httpclient.version>
 	</properties>
 
 	<build>
