--- a/src/main/resources/uat/application.properties
+++ b/src/main/resources/uat/application.properties
@@ -29,8 +29,8 @@ api.gw.base.url=https://internal-PPL-SDH-UAT-API-LB-1030598622.ap-southeast-1.el
 api.send.email.url=/uss/email
 
 # OAUTH2 (GLUU OpenID Connector Provider)
-oauth.host.name=gluu-ppl.azlabs.sg
-oauth.base.url=https://gluu-ppl.azlabs.sg
+oauth.host.name=internal-PPL-SDH-UAT-API-LB-1030598622.ap-southeast-1.elb.amazonaws.com
+oauth.base.url=https://internal-PPL-SDH-UAT-API-LB-1030598622.ap-southeast-1.elb.amazonaws.com:8443
 oauth.client.id=2e572bf8-4752-45a5-81fa-9d107be64d50
 oauth.client.secret=wpICNTGhCWstRjIWgRVUf4aHjFCRHachzaxkwWQw
 oauth.client.scopes=uss.send.email
