Resolve "SDMS - Enquiry Form"

--- a/src/main/resources/lab/application.properties
+++ b/src/main/resources/lab/application.properties
@@ -21,11 +21,11 @@ spring.resources.add-mappings=false
 # Security
 security.api-key=EYCiRQSfCw7vkFj1vyXmWkERwo20AmBkQvEzWEhu
 
-# Ecnryption
+# Encryption
 jasypt.encryptor.bean=customEncryptor
 
 # API GATEWAY
-api.gw.base.url=https://192.168.0.12:8443/
+api.gw.base.url=https://192.168.0.12:8443
 api.send.email.url=/uss/email
 
 # OAUTH2 (GLUU OpenID Connector Provider)
@@ -38,5 +38,7 @@ oauth.token.url=/oxauth/restv1/token
 
 # EMAIL TEMPLATE
 email.template.name.appt=AppointmentBooking
+email.template.name.enqAdm=EnquiryAdministrator
+email.template.name.enqPtn=EnquiryPatient
 
 
