Resolve "Refactor applications.properties by removing unnecessary encryption values"

--- a/src/main/resources/lab/application.properties
+++ b/src/main/resources/lab/application.properties
@@ -4,10 +4,10 @@ server.port=6060
 
 # Datasource
 spring.datasource.dataSourceClassName=org.mariadb.jdbc.MariaDbDataSource
-spring.datasource.dataSourceProperties.serverName=ENC(qfJRTX1wPe/ASgmu27nREvEyQMTEe/5E)
-spring.datasource.dataSourceProperties.portNumber=ENC(P6GikEaUnqU3zk3TVwGxHQ==)
-spring.datasource.dataSourceProperties.databaseName=ENC(a79PRj6nfGagoSDAICYSZw==)
-spring.datasource.username=ENC(g7h5EEi+EMhloNVuK4ekjCFifttf4c7Q)
+spring.datasource.dataSourceProperties.serverName=192.168.200.34
+spring.datasource.dataSourceProperties.portNumber=3306
+spring.datasource.dataSourceProperties.databaseName=fms
+spring.datasource.username=fms_user
 spring.datasource.password=ENC(sQRC4ObAD9ThksBieuXfXlJPSahyyxcs)
 
 #Servlet Startup
