Resolve "Refactor applications.properties by removing unnecessary encryption values"

--- a/src/main/resources/sit/application.properties
+++ b/src/main/resources/sit/application.properties
@@ -21,5 +21,5 @@ spring.resources.add-mappings=false
 # Security
 security.api-key=EYCiRQSfCw7vkFj1vyXmWkERwo20AmBkQvEzWEhu
 
-# Ecnryption
+# Encryption
 jasypt.encryptor.bean=customEncryptor
