--- a/src/main/resources/prod/application.properties
+++ b/src/main/resources/prod/application.properties
@@ -4,10 +4,10 @@ server.port=8080
 
 # Datasource
 spring.datasource.dataSourceClassName=org.mariadb.jdbc.MariaDbDataSource
-spring.datasource.dataSourceProperties.serverName=ENC(sm0BuktPSc250QpTXYpU0HFKFgIAU8lS)
-spring.datasource.dataSourceProperties.portNumber=ENC(70PJz6uaJXeDvLhM63u0Cw==)
-spring.datasource.dataSourceProperties.databaseName=ENC(dMTS/wPvnDXAi+85y1p+IQ==)
-spring.datasource.username=ENC(5vzsAAFNrUeu0gAOQViXKSHzMaBsk1VZ)
+spring.datasource.dataSourceProperties.serverName=<serverName-in-plain-text>
+spring.datasource.dataSourceProperties.portNumber=<portNumber-in-plain-text>
+spring.datasource.dataSourceProperties.databaseName=<databaseName-in-plain-text>
+spring.datasource.username=<userName-in-plain-text>
 spring.datasource.password=ENC(JEskFwb2IvneLjnzNMgnfqiEloPvBgP9)
 
 #Servlet Startup
@@ -21,5 +21,5 @@ spring.resources.add-mappings=false
 # Security
 security.api-key=EYCiRQSfCw7vkFj1vyXmWkERwo20AmBkQvEzWEhu
 
-# Ecnryption
+# Encryption
 jasypt.encryptor.bean=customEncryptor
