--- a/src/main/resources/uat/application.properties
+++ b/src/main/resources/uat/application.properties
@@ -38,3 +38,5 @@ oauth.token.url=/oxauth/restv1/token
 
 # EMAIL TEMPLATE
 email.template.name.appt=AppointmentBooking
+email.template.name.enqAdm=EnquiryAdministrator
+email.template.name.enqPtn=EnquiryPatient
