--- a/src/main/resources/sit/application.properties
+++ b/src/main/resources/sit/application.properties
@@ -23,3 +23,8 @@ security.api-key=EYCiRQSfCw7vkFj1vyXmWkERwo20AmBkQvEzWEhu
 
 # Encryption
 jasypt.encryptor.bean=customEncryptor
+
+# EMAIL TEMPLATE
+email.template.name.appt=AppointmentBooking
+email.template.name.enqAdm=EnquiryAdministrator
+email.template.name.enqPtn=EnquiryPatient
