Resolve "Deployment to Prod"

--- a/src/main/resources/prod/application.properties
+++ b/src/main/resources/prod/application.properties
@@ -4,11 +4,11 @@ server.port=8080
 
 # Datasource
 spring.datasource.dataSourceClassName=org.mariadb.jdbc.MariaDbDataSource
-spring.datasource.dataSourceProperties.serverName=<serverName-in-plain-text>
-spring.datasource.dataSourceProperties.portNumber=<portNumber-in-plain-text>
-spring.datasource.dataSourceProperties.databaseName=<databaseName-in-plain-text>
-spring.datasource.username=<userName-in-plain-text>
-spring.datasource.password=ENC(JEskFwb2IvneLjnzNMgnfqiEloPvBgP9)
+spring.datasource.dataSourceProperties.serverName= awssdmsappt-p.cluster-cnnxfws1cfax.ap-southeast-1.rds.amazonaws.com
+spring.datasource.dataSourceProperties.portNumber=3306
+spring.datasource.dataSourceProperties.databaseName=sdms_apptDB
+spring.datasource.username=sdms_appt_user
+spring.datasource.password=ENC(fb7iefuBu81jz/VYR6ygcLrjW0s4Hzq3)
 
 #Servlet Startup
 spring.mvc.servlet.load-on-startup=1
